--- a/ScrumTools/ScrumTools/Pages/CardPage.xaml
+++ b/ScrumTools/ScrumTools/Pages/CardPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ScrumTools.Pages.CardPage">
+             x:Class="ScrumTools.Pages.CardPage"
+             Title="Estimation">
     <ContentPage.Content>
         <Image Margin="5"
             Source="{Binding Image}"/>
