--- a/ScrumTools/ScrumTools/Pages/CardsGridPage.xaml
+++ b/ScrumTools/ScrumTools/Pages/CardsGridPage.xaml
@@ -5,47 +5,132 @@
              Title="Estimate">
     <ContentPage.Content>
         <ScrollView>
-            <Grid Margin="5">
+            <Grid Padding="10" RowSpacing="10" ColumnSpacing="10">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="180"/>
+                    <RowDefinition Height="180"/>
+                    <RowDefinition Height="180"/>
+                    <RowDefinition Height="180"/>
+                    <RowDefinition Height="180"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Frame Padding="0"
-                    Grid.Row="0" Grid.Column="0">
+
+                <Frame Grid.Row="0" Grid.Column="0" Padding="0">
                     <ContentView Padding="0" Margin="0">
                         <ContentView.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding GoToCardCommand}" CommandParameter="{Binding CardList[0]}"/>
                         </ContentView.GestureRecognizers>
-                        <Image Source="{Binding CardList[0].Thumbnail}"/>
+                        <Image Source="{Binding CardList[0].Thumbnail}" Aspect="AspectFill"/>
                     </ContentView>
                 </Frame>
-                <Frame Padding="0"
-                    Grid.Row="0" Grid.Column="1">
+                <Frame Grid.Row="0" Grid.Column="1" Padding="0">
                     <ContentView Padding="0" Margin="0">
                         <ContentView.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding GoToCardCommand}" CommandParameter="{Binding CardList[1]}"/>
                         </ContentView.GestureRecognizers>
-                        <Image Source="{Binding CardList[1].Image}"/>
+                        <Image Source="{Binding CardList[1].Thumbnail}" Aspect="AspectFill"/>
                     </ContentView>
                 </Frame>
-                <Frame Padding="0"
-                    Grid.Row="0" Grid.Column="2">
+                <Frame Grid.Row="0" Grid.Column="2" Padding="0">
                     <ContentView Padding="0" Margin="0">
                         <ContentView.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding GoToCardCommand}" CommandParameter="{Binding CardList[2]}"/>
                         </ContentView.GestureRecognizers>
-                        <Image Source="{Binding CardList[2].Image}"/>
+                        <Image Source="{Binding CardList[2].Thumbnail}" Aspect="AspectFill"/>
                     </ContentView>
                 </Frame>
-                
+                <Frame Grid.Row="1" Grid.Column="0" Padding="0">
+                    <ContentView Padding="0" Margin="0">
+                        <ContentView.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding GoToCardCommand}" CommandParameter="{Binding CardList[3]}"/>
+                        </ContentView.GestureRecognizers>
+                        <Image Source="{Binding CardList[3].Thumbnail}" Aspect="AspectFill"/>
+                    </ContentView>
+                </Frame>
+                <Frame Grid.Row="1" Grid.Column="1" Padding="0">
+                    <ContentView Padding="0" Margin="0">
+                        <ContentView.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding GoToCardCommand}" CommandParameter="{Binding CardList[4]}"/>
+                        </ContentView.GestureRecognizers>
+                        <Image Source="{Binding CardList[4].Thumbnail}" Aspect="AspectFill"/>
+                    </ContentView>
+                </Frame>
+                <Frame Grid.Row="1" Grid.Column="2" Padding="0">
+                    <ContentView Padding="0" Margin="0">
+                        <ContentView.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding GoToCardCommand}" CommandParameter="{Binding CardList[5]}"/>
+                        </ContentView.GestureRecognizers>
+                        <Image Source="{Binding CardList[5].Thumbnail}" Aspect="AspectFill"/>
+                    </ContentView>
+                </Frame>
+                <Frame Grid.Row="2" Grid.Column="0" Padding="0">
+                    <ContentView Padding="0" Margin="0">
+                        <ContentView.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding GoToCardCommand}" CommandParameter="{Binding CardList[6]}"/>
+                        </ContentView.GestureRecognizers>
+                        <Image Source="{Binding CardList[6].Thumbnail}" Aspect="AspectFill"/>
+                    </ContentView>
+                </Frame>
+                <Frame Grid.Row="2" Grid.Column="1" Padding="0">
+                    <ContentView Padding="0" Margin="0">
+                        <ContentView.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding GoToCardCommand}" CommandParameter="{Binding CardList[7]}"/>
+                        </ContentView.GestureRecognizers>
+                        <Image Source="{Binding CardList[7].Thumbnail}" Aspect="AspectFill"/>
+                    </ContentView>
+                </Frame>
+                <Frame Grid.Row="2" Grid.Column="2" Padding="0">
+                    <ContentView Padding="0" Margin="0">
+                        <ContentView.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding GoToCardCommand}" CommandParameter="{Binding CardList[8]}"/>
+                        </ContentView.GestureRecognizers>
+                        <Image Source="{Binding CardList[8].Thumbnail}" Aspect="AspectFill"/>
+                    </ContentView>
+                </Frame>
+                <Frame Grid.Row="3" Grid.Column="0" Padding="0">
+                    <ContentView Padding="0" Margin="0">
+                        <ContentView.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding GoToCardCommand}" CommandParameter="{Binding CardList[9]}"/>
+                        </ContentView.GestureRecognizers>
+                        <Image Source="{Binding CardList[9].Thumbnail}" Aspect="AspectFill"/>
+                    </ContentView>
+                </Frame>
+                <Frame Grid.Row="3" Grid.Column="1" Padding="0">
+                    <ContentView Padding="0" Margin="0">
+                        <ContentView.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding GoToCardCommand}" CommandParameter="{Binding CardList[10]}"/>
+                        </ContentView.GestureRecognizers>
+                        <Image Source="{Binding CardList[10].Thumbnail}" Aspect="AspectFill"/>
+                    </ContentView>
+                </Frame>
+                <Frame Grid.Row="3" Grid.Column="2" Padding="0">
+                    <ContentView Padding="0" Margin="0">
+                        <ContentView.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding GoToCardCommand}" CommandParameter="{Binding CardList[11]}"/>
+                        </ContentView.GestureRecognizers>
+                        <Image Source="{Binding CardList[11].Thumbnail}" Aspect="AspectFill"/>
+                    </ContentView>
+                </Frame>
+                <Frame Grid.Row="4" Grid.Column="0" Padding="0">
+                    <ContentView Padding="0" Margin="0">
+                        <ContentView.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding GoToCardCommand}" CommandParameter="{Binding CardList[12]}"/>
+                        </ContentView.GestureRecognizers>
+                        <Image Source="{Binding CardList[12].Thumbnail}" Aspect="AspectFill"/>
+                    </ContentView>
+                </Frame>
+                <Frame Grid.Row="4" Grid.Column="1" Padding="0">
+                    <ContentView Padding="0" Margin="0">
+                        <ContentView.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding GoToCardCommand}" CommandParameter="{Binding CardList[13]}"/>
+                        </ContentView.GestureRecognizers>
+                        <Image Source="{Binding CardList[13].Thumbnail}" Aspect="AspectFill"/>
+                    </ContentView>
+                </Frame>
             </Grid>
         </ScrollView>
     </ContentPage.Content>
