New Grid Display at Main Page and added some styles

--- a/ScrumTools/ScrumTools/Pages/CardPage.xaml
+++ b/ScrumTools/ScrumTools/Pages/CardPage.xaml
@@ -4,7 +4,8 @@
              x:Class="ScrumTools.Pages.CardPage"
              Title="Estimation">
     <ContentPage.Content>
-        <Image Margin="5"
-            Source="{Binding Image}"/>
+        <Frame Padding="0" Margin="5" VerticalOptions="Center" HorizontalOptions="Center">
+            <Image Source="{Binding Image}"/>
+        </Frame>
     </ContentPage.Content>
 </ContentPage>
