Minor display changes at MainPage

--- a/ScrumTools/ScrumTools/Pages/MainPage.xaml
+++ b/ScrumTools/ScrumTools/Pages/MainPage.xaml
@@ -11,7 +11,18 @@
             <Style x:Key="Cell" TargetType="ContentView">
                 <Setter Property="VerticalOptions" Value="Center" />
                 <Setter Property="BackgroundColor" Value="{StaticResource LightBackgroundColor}" />
-                <Setter Property="Margin" Value="5" />
+                <!--<Setter Property="Margin" Value="5" />-->
+            </Style>
+            <!-- Cell Label Style -->
+            <Style x:Key="CellLabel" TargetType="Label">
+                <Setter Property="TextColor" Value="{StaticResource PrimaryDarkColor}" />
+                <Setter Property="FontSize" Value="Large" />
+                <Setter Property="HorizontalTextAlignment" Value="Center" />
+            </Style>
+            <!-- Cell Image Style -->
+            <Style x:Key="CellImage" TargetType="Image">
+                <Setter Property="Margin" Value="0,5,0,0" />
+                <Setter Property="HeightRequest" Value="115" />
             </Style>
             
         </ResourceDictionary>
@@ -26,57 +37,57 @@
 
         <Grid BackgroundColor="{StaticResource DarkBackgroundColor}" RowSpacing="0" ColumnSpacing="0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="200"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="200" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Image Grid.Row="0" Grid.ColumnSpan="2" Source="freak.png" Margin="0,0,0,15"/>
+            <Image Grid.Row="0" Grid.ColumnSpan="2" Source="freak.png" Margin="0,0,0,5"/>
 
-            <ContentView Grid.Row="1" Grid.Column="0" Style="{StaticResource Cell}">
+            <ContentView Grid.Row="1" Grid.Column="0" Margin="5,0,5,5" Style="{StaticResource Cell}">
                 <ContentView.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding GoToCardsGridCommand}" />
                 </ContentView.GestureRecognizers>
                 <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="Center">
-                    <Image Source="cards.png" Margin="5" HeightRequest="100"/>
-                    <Label Text="Estimate" TextColor="{StaticResource PrimaryDarkColor}" FontSize="Large" HorizontalTextAlignment="Center"/>
+                    <Image Style="{StaticResource CellImage}" Source="cards.png"/>
+                    <Label Text="Estimate" Style="{StaticResource CellLabel}" />
                 </StackLayout>
             </ContentView>
 
-            <ContentView Grid.Row="1" Grid.Column="1" Style="{StaticResource Cell}">
+            <ContentView Grid.Row="1" Grid.Column="1" Margin="0,0,5,5" Style="{StaticResource Cell}">
+                <!--<ContentView.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding GoToChronoCommand}" />
+                </ContentView.GestureRecognizers>-->
+                <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+                    <Image Style="{StaticResource CellImage}" Source="hourglass.png"/>
+                    <Label Text="Chrono" Style="{StaticResource CellLabel}" />
+                </StackLayout>
+            </ContentView>
+
+            <ContentView Grid.Row="2" Grid.Column="0" Margin="5,0,5,5" Style="{StaticResource Cell}">
+                <!--<ContentView.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding GoToDocumentationCommand}" />
+                </ContentView.GestureRecognizers>-->
+                <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+                    <Image Style="{StaticResource CellImage}" Source="documents.png"/>
+                    <Label Text="Documentation" Style="{StaticResource CellLabel}" />
+                </StackLayout>
+            </ContentView>
+
+            <ContentView Grid.Row="2" Grid.Column="1" Margin="0,0,5,5" Style="{StaticResource Cell}">
                 <ContentView.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding GoToSettingsCommand}" />
                 </ContentView.GestureRecognizers>
                 <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
-                    <Image Margin="5" Source="hourglass.png" HeightRequest="100"/>
-                    <Label Text="Chrono" TextColor="{StaticResource PrimaryDarkColor}" FontSize="Large" HorizontalTextAlignment="Center"/>
+                    <Image Style="{StaticResource CellImage}" Source="settings.png" />
+                    <Label Text="Settings" Style="{StaticResource CellLabel}" />
                 </StackLayout>
             </ContentView>
 
-            <ContentView Grid.Row="2" Grid.Column="0" Style="{StaticResource Cell}">
-                <ContentView.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding GoToSettingsCommand}" />
-                </ContentView.GestureRecognizers>
-                <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
-                    <Image Margin="5" Source="documents.png" HeightRequest="100"/>
-                    <Label Text="Documentation" TextColor="{StaticResource PrimaryDarkColor}" FontSize="Large" HorizontalTextAlignment="Center"/>
-                </StackLayout>
-            </ContentView>
-
-            <ContentView Grid.Row="2" Grid.Column="1" Style="{StaticResource Cell}">
-                <ContentView.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding GoToSettingsCommand}" />
-                </ContentView.GestureRecognizers>
-                <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
-                    <Image Margin="5" Source="settings.png" HeightRequest="100"/>
-                    <Label Text="Settings" TextColor="{StaticResource PrimaryDarkColor}" FontSize="Large" HorizontalTextAlignment="Center"/>
-                </StackLayout>
-            </ContentView>
         </Grid>
-
     </ContentPage.Content>
 </ContentPage>
