--- a/ScrumTools/ScrumTools/Pages/CardPage.xaml
+++ b/ScrumTools/ScrumTools/Pages/CardPage.xaml
@@ -5,7 +5,12 @@
              Title="Estimation">
     <ContentPage.Content>
         <Frame Padding="0" Margin="5" VerticalOptions="Center" HorizontalOptions="Center">
-            <Image Source="{Binding Image}"/>
+            <ContentView>
+                <ContentView.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding GoToRotateCardCommand}" />
+                </ContentView.GestureRecognizers>
+            </ContentView>
+            <Image x:Name="image" Source="{Binding Image}"/>
         </Frame>
     </ContentPage.Content>
 </ContentPage>
