--- a/ScrumTools/ScrumTools/Pages/AboutPage.xaml
+++ b/ScrumTools/ScrumTools/Pages/AboutPage.xaml
@@ -12,7 +12,7 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <StackLayout Grid.Row="0">
-                    <Image Source="icon" HeightRequest="100" />
+                    <Image Source="about.png" HeightRequest="100" />
                     <Label Text="Scrum Tools" HorizontalOptions="Center" TextColor="{StaticResource PrimaryColor}" FontSize="Large"/>
                 </StackLayout>
                 <StackLayout Grid.Row="1">
@@ -57,7 +57,7 @@
                     <Label Text="Please do not forget to rate the application." />
                     <Label Text="Enjoy!" />
                 </StackLayout>
-                <Button Grid.Row="2" Text="Close" Command="{Binding CloseCommand}" Margin="0"/>
+                <Button Grid.Row="2" Text="Close" Command="{Binding CloseCommand}" Margin="0" BackgroundColor="{StaticResource AccentColor}" TextColor="{StaticResource LightTextColor}"/>
             </Grid>
         </ScrollView>
     </ContentPage.Content>
