Pre-release comit (from Almeria) - Includes changes at AboutPage, inserting links to social networks, and some UX improvements

--- a/ScrumTools/ScrumTools/Pages/MainPage.xaml
+++ b/ScrumTools/ScrumTools/Pages/MainPage.xaml
@@ -60,7 +60,7 @@
 
             <ContentView Grid.Row="1" Grid.Column="0" Style="{StaticResource Cell}" >
                 <ContentView.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding GoToCardsGridCommand}" />
+                    <TapGestureRecognizer Command="{Binding GoToEstimateCommand}" />
                 </ContentView.GestureRecognizers>
                 <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="Center">
                     <Image Style="{StaticResource CellImage}" Source="cards.png"/>
