--- a/ScrumTools/ScrumTools/Pages/AboutPage.xaml
+++ b/ScrumTools/ScrumTools/Pages/AboutPage.xaml
@@ -3,6 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ScrumTools.Pages.AboutPage"
              Title="About">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <!-- ContentView style -->
+            <Style x:Key="Cell" TargetType="ContentView">
+                <Setter Property="VerticalOptions" Value="Center" />
+                <Setter Property="Padding" Value="2" />
+            </Style>
+            
+            <!-- Cell Image Style -->
+            <Style x:Key="CellImage" TargetType="Image">
+                <Setter Property="HeightRequest" Value="40" />
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.Content>
         <ScrollView>
             <Grid Padding="5">
@@ -13,51 +27,73 @@
                 </Grid.RowDefinitions>
                 <StackLayout Grid.Row="0">
                     <Image Source="about.png" HeightRequest="100" />
-                    <Label Text="Scrum Tools" HorizontalOptions="Center" TextColor="{StaticResource PrimaryColor}" FontSize="Large"/>
+                    <Label Text="Scrum Tools" HorizontalOptions="Center" TextColor="{StaticResource PrimaryDarkColor}" FontSize="Large"/>
                 </StackLayout>
                 <StackLayout Grid.Row="1">
-                    <Label>
+                    <Label HorizontalTextAlignment="Center">
                         <Label.FormattedText>
                             <FormattedString>
                                 <FormattedString.Spans>
-                                    <Span Text="Scrum Tools" ForegroundColor="{StaticResource PrimaryColor}"/>
-                                    <Span Text=" (1.0) is an application developed by " />
-                                    <Span Text="Juan López García" ForegroundColor="{StaticResource PrimaryColor}"/>
-                                    <Span Text=", available for iOS, Android and Windows." />
+                                    <Span Text="This application has been developed by " />
+                                    <Span Text="Juan López García" ForegroundColor="{StaticResource PrimaryDarkColor}"/>
+                                    <Span Text=", and will be available for iOS, Android and Windows." />
                                 </FormattedString.Spans>
                             </FormattedString>
                         </Label.FormattedText>
                     </Label>
-                    <Label>
+                    <Label HorizontalTextAlignment="Center">
                         <Label.FormattedText>
                             <FormattedString>
                                 <FormattedString.Spans>
                                     <Span Text="The images used for the cards have been designed by " />
-                                    <Span Text="Redbooth" ForegroundColor="{StaticResource PrimaryColor}"/>
-                                    <Span Text=", under license " />
+                                    <Span Text="Redbooth" ForegroundColor="{StaticResource PrimaryColor}" />
+                                    <Span Text=", and are in use under a license " />
                                     <Span Text="Creative Commons – Attribution (CC BY 3.0)" FontAttributes="Bold"/>
                                     <Span Text="." />
                                 </FormattedString.Spans>
                             </FormattedString>
                         </Label.FormattedText>
                     </Label>
-                    <Label>
+                    <Label HorizontalTextAlignment="Center">
                         <Label.FormattedText>
                             <FormattedString>
                                 <FormattedString.Spans>
-                                    <Span Text="I also want to show my appreciation to " />
+                                    <Span Text="As developer, I want to show my appreciation to " />
                                     <Span Text="Adrian G. Jorge" ForegroundColor="{StaticResource PrimaryColor}"/>
                                     <Span Text=" and " />
                                     <Span Text="Novoshore Europe S.L." ForegroundColor="{StaticResource PrimaryColor}"/>
-                                    <Span Text=" for their support during the first steps of this project." />
+                                    <Span Text=" for the support during the first stages of the project." />
                                 </FormattedString.Spans>
                             </FormattedString>
                         </Label.FormattedText>
                     </Label>
-                    <Label Text="Please do not forget to rate the application." />
-                    <Label Text="Enjoy!" />
+                    <Label HorizontalTextAlignment="Center"  Text="If you like it, please do not forget to rate the application." />
+                    <Label Text="I hope you enjoy it!" HorizontalTextAlignment="Center" TextColor="{StaticResource PrimaryColor}"/>
+
+                    <StackLayout Orientation="Horizontal" Margin="10" HorizontalOptions="Center">
+                        <ContentView Style="{StaticResource Cell}" >
+                            <ContentView.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding GoToLinkedinCommand}" />
+                            </ContentView.GestureRecognizers>
+                            <Image Style="{StaticResource CellImage}" Source="linkedin.png"/>
+                        </ContentView>
+                        <ContentView Style="{StaticResource Cell}" >
+                            <ContentView.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding GoToGitHubCommand}" />
+                            </ContentView.GestureRecognizers>
+                            <Image Style="{StaticResource CellImage}" Source="github.png"/>
+                        </ContentView>
+                        <ContentView Style="{StaticResource Cell}" >
+                            <ContentView.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding GoToTwitterCommand}" />
+                            </ContentView.GestureRecognizers>
+                            <Image Style="{StaticResource CellImage}" Source="twitter.png"/>
+                        </ContentView>
+                    </StackLayout>
                 </StackLayout>
+                
                 <Button Grid.Row="2" Text="Close" Command="{Binding CloseCommand}" Margin="0" BackgroundColor="{StaticResource AccentColor}" TextColor="{StaticResource LightTextColor}"/>
+            
             </Grid>
         </ScrollView>
     </ContentPage.Content>
