--- a/ScrumTools/ScrumTools/Pages/CardsGridPage.xaml
+++ b/ScrumTools/ScrumTools/Pages/CardsGridPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ScrumTools.Pages.CardsGridPage"
-             Title="Estimate">
+             Title="Scrum Poker Cards">
     <ContentPage.Content>
         <ScrollView>
             <Grid Padding="10" RowSpacing="10" ColumnSpacing="10">
