--- a/ScrumTools/ScrumTools/Pages/SettingsPage.xaml
+++ b/ScrumTools/ScrumTools/Pages/SettingsPage.xaml
@@ -6,8 +6,8 @@
     <ContentPage.Content>
         <TableView Intent="Settings">
             <TableView.Root>
-                <TableSection Title="Card's display" >
-                    <SwitchCell Text="Display cards as Grid"  On="{Binding GridOn}" />
+                <TableSection Title="Scrum Poker Cards" >
+                    <SwitchCell Text="Display cards as a Grid"  On="{Binding GridOn}" />
                 </TableSection>
             </TableView.Root>
         </TableView>
