--- a/ScrumTools/ScrumTools/Pages/ComingSoonPage.xaml
+++ b/ScrumTools/ScrumTools/Pages/ComingSoonPage.xaml
@@ -7,13 +7,15 @@
         <Grid Padding="5" RowSpacing="10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            
-            <Image Grid.Row="0" Source="robot.png" HeightRequest="150" VerticalOptions="End"/>
-            <Label Grid.Row="1" Text="This section is under construction. It will be available soon!!" HorizontalTextAlignment="Center" VerticalOptions="Start"/>
-            <Button Grid.Row="2" Text="Close" Command="{Binding CloseCommand}" Margin="0" BackgroundColor="{StaticResource AccentColor}" TextColor="{StaticResource LightTextColor}"/>
+
+            <StackLayout Grid.Row="0" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image Grid.Row="0" Source="robot.png" HeightRequest="150" />
+                <Label Text="This section is under construction." HorizontalTextAlignment="Center"/>
+                <Label Text="It will be available very soon!!" HorizontalTextAlignment="Center"/>
+            </StackLayout> 
+            <Button Grid.Row="1" Text="Close" Command="{Binding CloseCommand}" Margin="0" BackgroundColor="{StaticResource AccentColor}" TextColor="{StaticResource LightTextColor}"/>
             
         </Grid>
     </ContentPage.Content>
