--- a/ScrumTools/ScrumTools/Pages/MainPage.xaml
+++ b/ScrumTools/ScrumTools/Pages/MainPage.xaml
@@ -70,7 +70,7 @@
 
             <ContentView Grid.Row="1" Grid.Column="1" Style="{StaticResource Cell}">
                 <ContentView.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding GoToComingSoonCommand}" />
+                    <TapGestureRecognizer Command="{Binding GoToTimerCommand}" />
                 </ContentView.GestureRecognizers>
                 <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
                     <Image Style="{StaticResource CellImage}" Source="timer.png"/>
