--- a/ScrumTools/ScrumTools/Pages/TimerPage.xaml
+++ b/ScrumTools/ScrumTools/Pages/TimerPage.xaml
@@ -2,16 +2,29 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ScrumTools.Pages.TimerPage"
-             Title="Clock Page">
+             Title="Daily Scrum">
     <ContentPage.Content>
-        <StackLayout>
-            <TimePicker Time="{Binding SetTime, Mode=TwoWay}"  HorizontalOptions="Center" ></TimePicker>
-            <Button Text="Start" Command="{Binding StartCommand}"></Button>
-            <Label Text="{Binding Time, StringFormat='{0:T}'}"
-                Font="Large"
-                HorizontalOptions="Center"
-                VerticalOptions="Center">
-            </Label>
-        </StackLayout>
+        <Grid Margin="5">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <Image Grid.Row="0" Source="timer.png"
+                HeightRequest="150"
+                Margin="5"/>
+            <Frame Grid.Row="1" >
+                <Label Text="{Binding Time, StringFormat='{0:T}'}"
+                    FontSize="64"
+                    HorizontalOptions="Center"
+                    VerticalOptions="Center">
+                </Label>
+            </Frame>
+            <StackLayout Grid.Row="2">
+                <Button  Text="Start" Command="{Binding StartCommand}" IsEnabled="{Binding IsStop}"  />
+                <Button  Text="Pause" Command="{Binding PauseCommand}" IsEnabled="{Binding IsStop}"/>
+            </StackLayout>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
